[gd_scene load_steps=3 format=3 uid="uid://cvti3njf1lus6"]

[ext_resource type="Script" path="res://scenes/ui-scenes/settings-screen/pause-screen/pause_screen.gd" id="1_50yhu"]
[ext_resource type="FontFile" uid="uid://dxfyisbd2ylri" path="res://assets/fonts/joystix monospace.otf" id="1_i4rb4"]

[node name="PauseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50yhu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -800.0
offset_top = -450.0
offset_right = 800.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.5
offset_top = -419.0
offset_right = 237.5
offset_bottom = -303.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_i4rb4")
theme_override_font_sizes/font_size = 96
text = "PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -450.0
offset_right = 199.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 90
alignment = 1

[node name="ResumeBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_i4rb4")
theme_override_font_sizes/font_size = 51
text = "RESUME"

[node name="RestartBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_i4rb4")
theme_override_font_sizes/font_size = 51
text = "Restart"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_i4rb4")
theme_override_font_sizes/font_size = 51
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartBtn" to="." method="restart_level"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="quit_level"]
